# minwallet-ios

./: .gitignore  .swift-format  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  apollo-codegen-config.json
.github/workflows/: beta.yaml  ci.yaml
CodeScanner/: Package.swift
CodeScanner/Sources/CodeScanner/: CodeScanner.swift  ScannerViewController.swift
MinWallet/: Info.plist  MinWalletApp.swift
MinWallet.xcodeproj/: project.pbxproj
MinWallet.xcodeproj/xcshareddata/xcschemes/: MinWallet.xcscheme
MinWallet/Data/Model/: AdaPriceResponse.swift  AggregatorSource.swift  AppSetting+Currency.swift  AppSetting.swift  AssetData.swift  AssetPosition.swift  AssetsResponse.swift  BuildTxRequest.swift  ChartPeriod.swift  EstimationRequest.swift  LPAssetPosition.swift  Language.swift  MinWallet+Mapper.swift  OrderHistory.swift  OrderHistoryV2+UI.swift  (+14 more)
MinWallet/Environment/: AppConfig.xcconfig  Constant.swift  Development.xcconfig  MinWallet.entitlements  ios-api.cer
MinWalletAPI/: Package.swift
MinWalletTests/: MinWalletTests.swift
MinWalletUITests/: MinWalletUITests.swift  MinWalletUITestsLaunchTests.swift
OneSignalNotificationServiceExtension/: NotificationService.swift
docs/: CategoryHome.md  CategorySettings.md  CategorySwap.md  CategoryWallet.md  MarketResearch.md  ProjectManagementPlan.md  Requirements.md  TechArchitect.drawio
fastlane/: Appfile  Fastfile  Matchfile
rust/: .gitignore  Cargo.toml  README.md  build.rs  build.sh
rust/src/: crypto.rs  lib.rs  mwrust.udl  network.rs
rust/src/wallet/: embedded.rs  emip3.rs  mod.rs
(+336 files in other folders)
